--- a/Route_Generator/templates/Route_Generator/index.html
+++ b/Route_Generator/templates/Route_Generator/index.html
@@ -1,21 +1,21 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+<head>
     <title>Django Tailwind</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		{% tailwind_css %}
-	</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% tailwind_css %}
+</head>
 
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
+<body class="bg-gray-50 font-serif leading-normal tracking-normal">
 
 <button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
-   <span class="sr-only">Open sidebar</span>
-   <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-   <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
-   </svg>
+    <span class="sr-only">Open sidebar</span>
+    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
+    </svg>
 </button>
 
 <aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
@@ -45,16 +45,33 @@
    </div>
 </aside>
 
+
 <div class="p-4 sm:ml-64">
     <div>
         <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-black-900 md:text-5xl lg:text-6xl dark:text-black">Mapa de las Capitales de Provincia en España</h1>
     </div>
+
+        <form method="POST">
+        {% csrf_token %}
+        <label for="ciudad_origen">Ciudad de origen:</label>
+        <input type="text" id="ciudad_origen" name="ciudad_origen" required>
+        <br><br>
+        <label for="ciudad_destino">Ciudad de destino:</label>
+        <input type="text" id="ciudad_destino" name="ciudad_destino" required>
+        <br><br>
+        <button type="submit">Calcular ruta</button>
+    </form>
+
+    {% if mensaje %}
+        <div class="bg-green-500 text-white p-4 mb-4 rounded-lg">
+            <p>{{ mensaje }}</p>
+        </div>
+    {% endif %}
+
     <div class="bg-gray-800 p-4">
         <iframe src="{% static 'mapas/mapa_espana.html' %}" width="100%" height="600px" style="border:none;"></iframe>
     </div>
-
-
 </div>
 
-	</body>
+</body>
 </html>
