--- a/Route_Generator/templates/Route_Generator/reparto.html
+++ b/Route_Generator/templates/Route_Generator/reparto.html
@@ -121,6 +121,7 @@
                         <li><strong>Distancia:</strong> {{ camion_data.distancia_camion }} km</li>
                         <li><strong>Coste:</strong> {{ camion_data.coste_trayecto }} €</li>
                         <li><strong>Tiempo (sin descansos):</strong> {{ camion_data.tiempo_sin_descanso }}</li>
+                        <li><strong>Fecha limite:</strong> {{ camion_data.fecha_limite }}</li>
                         <li><strong>Ruta:</strong> {{ camion_data.ruta|join:" → " }}</li>
                     </ul>
 
@@ -141,6 +142,7 @@
                                 <li><strong>Coste:</strong> {{ camion_data.coste_trayecto }} €</li>
                                 <li><strong>Tiempo (sin descansos):</strong> {{ camion_data.tiempo_sin_descanso }}</li>
                                 <li><strong>Tiempo (con descansos):</strong> {{ camion_data.tiempo_con_descanso }}</li>
+                                <li><strong>Fecha limite:</strong> {{ camion_data.fecha_limite }}</li>
                             </ul>
                         </div>
                             <div>
@@ -216,25 +218,5 @@
         }
     });
     </script>
-        <h3>Ruta Completa:</h3>
-        <p>{{ camion_data.ruta|join:" → " }}</p>
-
-        <h3>Viabilidad de la Ruta:</h3>
-        {% for viabilidad in viabilidad_rutas %}
-            {% if viabilidad.camion_idx == camion_data.indice %}
-                <p>{{ viabilidad.mensaje }}</p>
-            {% endif %}
-        {% endfor %}
-
-        <h3>Tiempo Estimado:</h3>
-        {% for tiempo in tiempos_rutas %}
-            {% if tiempo.camion_idx == camion_data.indice %}
-                <p>Tiempo estimado: {{ tiempo.tiempo_estimado }} horas</p>
-                <p>Tiempo límite: {{ tiempo.tiempo_limite }} horas</p>
-                <p>Tiempo previsto: {{ tiempo.tiempo_previsto }} horas</p>
-                <p>{{ tiempo.mensaje }}</p>
-            {% endif %}
-        {% endfor %}
-    {% endfor %}
 </body>
 </html>
