--- a/Route_Generator/templates/Route_Generator/reparto.html
+++ b/Route_Generator/templates/Route_Generator/reparto.html
@@ -121,6 +121,7 @@
                         <li><strong>Distancia:</strong> {{ camion_data.distancia_camion }} km</li>
                         <li><strong>Coste:</strong> {{ camion_data.coste_trayecto }} €</li>
                         <li><strong>Tiempo (sin descansos):</strong> {{ camion_data.tiempo_sin_descanso }}</li>
+                        <li><strong>Fecha de entrega mínima:</strong> {{ camion_data.fecha_minima }}</li>
                         <li><strong>Fecha limite:</strong> {{ camion_data.fecha_limite }}</li>
                         <li><strong>Ruta:</strong> {{ camion_data.ruta|join:" → " }}</li>
                     </ul>
@@ -142,6 +143,7 @@
                                 <li><strong>Coste:</strong> {{ camion_data.coste_trayecto }} €</li>
                                 <li><strong>Tiempo (sin descansos):</strong> {{ camion_data.tiempo_sin_descanso }}</li>
                                 <li><strong>Tiempo (con descansos):</strong> {{ camion_data.tiempo_con_descanso }}</li>
+                                <li><strong>Fecha de entrega mínima:</strong> {{ camion_data.fecha_minima }}</li>
                                 <li><strong>Fecha limite:</strong> {{ camion_data.fecha_limite }}</li>
                             </ul>
                         </div>
