--- a/Route_Generator/templates/Route_Generator/reparto.html
+++ b/Route_Generator/templates/Route_Generator/reparto.html
@@ -155,7 +155,7 @@
                                             <th class="border border-gray-300 px-4 py-2 text-left">ID del Pedido</th>
                                             <th class="border border-gray-300 px-4 py-2 text-left">Destino</th>
                                             <th class="border border-gray-300 px-4 py-2 text-left">Producto</th>
-                                            <th class="border border-gray-300 px-4 py-2 text-left">Unidades</th>
+                                            <th class="border border-gray-300 px-4 py-2 text-left">Nº Palés</th>
                                             <th class="border border-gray-300 px-4 py-2 text-left">Precio Unitario (€)</th>
                                         </tr>
                                     </thead>
